# job-search-automation-portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  add_vacancy.py  alter_db.py  batch_add_from_json.py  cover_letter.py  db.py  db_stats.py  docker-compose.prod.yml  docker-compose.yml  freelance_add.py  freelance_report.py  grand_check.py  morning_brief.py  report.py  requirements.txt  requirements_api.txt  run_scheduler.py  session_vacancies.json  sheets_key.json.example  startup.sh  sync_to_sheets.py  telegram_monitor.py  test_batch_add_from_json.py  test_follow_up.py  test_hh_auth.py  test_monitors.py  test_report_and_add.py  test_skill_gap_report.py  upwork_email_monitor.py
.github/workflows/: daily_report.yml  dbus_service_ci.yml  freelance_weekly.yml  morning_brief.yml  qml_system_monitor_ci.yml  qt_ci.yml  telegram_monitor.yml  upwork_monitor.yml  weekly_report.yml  winapi_showcase_ci.yml
app/: auth.py  cache.py  config.py  database.py  exceptions.py  main.py  middleware.py  scheduler.py  ws.py
app/models/: freelance.py  vacancy.py
app/routers/: analytics.py  brief.py  freelance.py  health.py  kpi.py  stats.py  telegram.py  vacancies.py
app/schemas/: freelance.py  stats.py  vacancy.py
automation/: add_vacancy.py  analytics.py  auto_review.py  batch_add_from_json.py  follow_up.py  kpi_report.py  report.py  skill_gap_report.py  telegram_monitor.py  upwork_email_monitor.py
db/: __init__.py  clickhouse_init.sql  clickhouse_writer.py  db.py  exceptions.py  init_db.py
portfolio/: README.md
portfolio/daq-bugfix/: HFileThreads.cpp  README.md
portfolio/dbus_service/: CMakeLists.txt  README.md
portfolio/dbus_service/build_tmp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dbus_client  dbus_service
portfolio/dbus_service/build_tmp/.qt/: QtDeploySupport.cmake
portfolio/dbus_service/build_tmp/Testing/Temporary/: CTestCostData.txt
portfolio/dbus_service/build_tmp/dbus_client_autogen/: deps
portfolio/dbus_service/build_tmp/dbus_service_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
portfolio/dbus_service/build_tmp/dbus_service_autogen/EZIERFRHL2/: moc_SystemInfoService.cpp  moc_SystemInfoService.cpp.d
portfolio/dbus_service/build_tmp/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_dbus_service
portfolio/dbus_service/build_tmp/tests/test_dbus_service_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
portfolio/dbus_service/build_tmp/tests/test_dbus_service_autogen/Z6MJLBXMSL/: moc_SystemInfoService.cpp  moc_SystemInfoService.cpp.d
portfolio/dbus_service/build_tmp/tests/test_dbus_service_autogen/include/: test_dbus_service.moc  test_dbus_service.moc.d
portfolio/dbus_service/client/: main.cpp
portfolio/dbus_service/service/: SystemInfoService.cpp  SystemInfoService.h  main.cpp
portfolio/dbus_service/tests/: CMakeLists.txt  test_dbus_service.cpp
portfolio/mil1553_analyzer/: README.md  mil1553_analyzer.dpr
portfolio/mil1553_analyzer/src/: MIL1553Protocol.pas  MIL1553Types.pas
portfolio/mil1553_analyzer/tests/: TestMIL1553Protocol.pas
portfolio/qml_system_monitor/: CMakeLists.txt  README.md
portfolio/qml_system_monitor/build_tmp/: CMakeCache.txt
portfolio/qml_system_monitor/qml/: main.qml
portfolio/qml_system_monitor/src/: SystemStats.cpp  SystemStats.h  main.cpp
portfolio/qml_system_monitor/tests/: CMakeLists.txt  test_system_stats.cpp
portfolio/qt-job-dashboard/: CMakeLists.txt  README.md
portfolio/qt-job-dashboard/assets/: resources.qrc  style.qss
portfolio/qt-job-dashboard/src/: main.cpp
portfolio/qt-job-dashboard/src/dialogs/: diagnosticsdialog.cpp  diagnosticsdialog.h  scriptdialog.cpp  scriptdialog.h  settingsdialog.cpp  settingsdialog.h  vacancydetaildialog.cpp  vacancydetaildialog.h
portfolio/qt-job-dashboard/src/mainwindow/: mainwindow.cpp  mainwindow.h
portfolio/qt-job-dashboard/src/models/: ivacancymodel.h  vacancyfiltermodel.cpp  vacancyfiltermodel.h  vacancysqlmodel.cpp  vacancysqlmodel.h
portfolio/qt-job-dashboard/src/utils/: csvexporter.cpp  csvexporter.h  dberror.h  logging.cpp  logging.h  status.h
portfolio/qt-job-dashboard/src/views/: statisticsview.cpp  statisticsview.h  vacancyview.cpp  vacancyview.h
portfolio/qt-job-dashboard/src/widgets/: kpiwidget.cpp  kpiwidget.h  processrunner.cpp  processrunner.h  statusdelegate.cpp  statusdelegate.h
portfolio/qt-job-dashboard/tests/: CMakeLists.txt  test_csv_exporter.cpp  test_vacancy_model.cpp
portfolio/winapi_showcase/: .gitignore  CMakeLists.txt  README.md
portfolio/winapi_showcase/01_ProcessMonitor/: CMakeLists.txt  ProcessInfo.h  ProcessMonitor.cpp  README.md  process_monitor.cpp
portfolio/winapi_showcase/02_FileWatcher/: CMakeLists.txt  README.md  file_watcher.cpp
portfolio/winapi_showcase/03_NamedPipeIPC/: CMakeLists.txt  README.md  pipe_client.cpp  pipe_server.cpp
portfolio/winapi_showcase/common/: win_handle.h
portfolio/winapi_showcase/tests/: CMakeLists.txt  test_file_watcher.cpp  test_named_pipe.cpp  test_process_monitor.cpp
scripts/: add_vacancy_sheets.py  check_prompt.py  migrate_from_sheets.py  session_prompt.py  session_vacancies.json
tests/: conftest.py  test_api.py  test_clickhouse.py  test_cover_letter.py  test_freelance.py  test_kpi_events.py  test_monitors.py  test_morning_brief.py
